# cs50p-project-genai-copilot

./: README.md  pyproject.toml
tests/: test_country_info.py  test_exit_day_calculator.py
visa_tool/: cli.py  country_info.py  exit_day_calculator.py
